--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
 		</div>
 		<div class="content">
 			<div class="upper_content">
+				<div class="upper_content_1"></div>
+				<div class="upper_content_2"></div>
+				<div class="upper_content_3">
 				<h1 class="upper_content_title">A Site About <span class="dog_name">Some Dogs</span></h1>
 				<img class="dog_image" src="images/dog1-sq.jpg">
 				<div class="upper_content_details">
 					<label class="dog_name_label">Name</label>
 					<input class="dog_name_input" type="text" placeholder="Type your dog name here...">
 					<button type="button" class="name_dog_botton">Name This Dog</button>
+				</div>
 				</div>
 			</div>
 			<div class="content_lower">
